--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<a href="Export/Web/Composition Based Practice 1.html">link text</a>
+<head>
+  <meta http-equiv='refresh' content='0; URL=Export/Web/Composition Based Practice 1.html'>
+</head>
